# RustOS

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
crates/kernal/: Cargo.toml
crates/kernal/src/: allocator.rs  gdt.rs  interrupts.rs  keyboard.rs  lib.rs  memory.rs  task.rs  vga_buffer.rs
docs/: Hierarchy..uxf
src/: main.rs
