[package]
name = "rust_os"
version = "0.1.0"
authors = ["npex42 <npex42@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kernal = {version = "0.1.0", path = "crates/kernal"}

x86_64 = "0.13.2"
bootloader = "0.9.8"
uart_16550 = "0.2.0"


[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial", "stdio",
    "-display", "none"
]
test-success-exit-code = 33         # (0x10 << 1) | 1
