[package]
name = "kernal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volatile = "0.2.6"
bootloader = "0.9.8"
spin = "0.5.2"
x86_64 = "0.13.2"
uart_16550 = "0.2.0"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.0"


[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]



